src/main/java/com/example/comma/global/error/exception/ForbiddenException.java
package com.example.comma.global.error.exception;


import com.example.comma.global.error.ErrorCode;

public class ForbiddenException extends BusinessException {
    public ForbiddenException() {
        super(ErrorCode.FORBIDDEN);
    }

    public ForbiddenException(ErrorCode errorCode) {
        super(errorCode);
    }
}